Fixed an issue where the selling-bg image wasn't displaying correctly on iOS devices, it wasn't showing as fixed and the text wasn't scrolling as it should. Found a fix online for this common iOS issue and adapted slightly to make it work with my existing design. Tested on iOS devices and the image displays correctly, is fixed and the text scrolls as originally planned.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,15 +149,30 @@ a.nav-link {
 }
 
 .selling-bg {
-    background: url("../images/sinka-oneils.jpg") center top no-repeat fixed;
     min-height: 60vh;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     display: flex;
     align-items: center;
 }
+
+/* Found issue on iOS with background-attachment: fixed. Found solution to fix this on https://github.com/thesved/fixed-cover-background. */
+
+.selling-bg:after{
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index: -1;  /* needed to keep in the background */
+      background: url(../images/sinka-oneils.jpg) center top no-repeat;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+}
+
+/* All code between this and the comment above is not my own work, it has been found and used from https://github.com/thesved/fixed-cover-background
+to fix an error on iOS devices. I have modified it slightly but do not claim this as my own */
 
 .selling-paragraph {
     margin-bottom: 16px;
